--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "todo-creator",
+  "name": "Octodo",
   "description": "Creates markdown todos",
   "version": "0.0.1",
   "icons": {
@@ -11,7 +11,7 @@
       "64": "icons/octopus.png"
     },
     "default_popup": "browserAction/index.html",
-    "default_title": "todo-creator"
+    "default_title": "Octodo"
   },
   "options_ui": {
     "page": "options/index.html"
