add add-on id so we can test it locally without temporary add-on

--- a/manifest.json
+++ b/manifest.json
@@ -20,5 +20,10 @@
     "storage",
     "clipboardWrite",
     "activeTab"
-  ]
+  ],
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "octodo@example.com"
+    }
+  }
 }
